--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "psr-4": {
             "Jinas\\Filaa\\" : "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.4"
     }
 }
